# orfmatch

./: .gitignore  README.md  pyproject.toml
src/orfmatch/: main.py  plots.py
src/ref_annotate/: main.py
tests/: test.gff
