[project]
authors = [{name = "mcgilmore", email = "michael_gilmore@live.com"}]
name = "ref-annotate"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pyrodigal>=3.6.3.post1,<4", "pyhmmer>=0.11.0,<0.12", "biopython>=1.85,<2", "bcbio-gff>=0.7.1,<0.8"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
ref-annotate = "ref_annotate.main:main"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
ref_annotate = { path = ".", editable = true }

[tool.pixi.tasks]
test-install = "pip install -e ."

[tool.pixi.dependencies]
prokka = ">=1.14.6,<2"
