[project]
authors = [{name = "mcgilmore", email = "michael_gilmore@live.com"}]
name = "orfmatch"
requires-python = ">= 3.11"
version = "0.1.0"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [ "pyrodigal>=3.6.3.post1,<4", "pyhmmer>=0.11.0,<0.12", "biopython>=1.85,<2", "tqdm>=4.67.1,<5"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
orfmatch = "orfmatch.main:main"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
orfmatch = { path = ".", editable = true }

[tool.pixi.tasks]
test-install = "pip install -e ."
